--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -20,13 +20,15 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '17'
-        cache: gradle
     
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
+    
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
     
     - name: Build Debug APK
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleDebug --no-daemon
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
