--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  workflow_dispatch:  # Allows manual trigger
+  workflow_dispatch:
 
 jobs:
   build:
@@ -21,14 +21,16 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
     
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4
-    
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
     
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
+      with:
+        gradle-version: '8.2'
+    
     - name: Build Debug APK
-      run: ./gradlew assembleDebug --no-daemon
+      run: gradle assembleDebug --no-daemon
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
